--- a/session/single-session.html
+++ b/session/single-session.html
@@ -21,7 +21,7 @@
   <!-- Header -->
   <header>
     <section class="container-class">
-      <a target="_blank" class="logo" href="https://satvicmovement.org/">
+      <a class="logo" href="/">
         <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="156" height="52"
           viewBox="0 0 156 52" fill="none">
           <rect width="156" height="51.0545" fill="url(#pattern0_2187_9969)" />
@@ -49,7 +49,7 @@
           <li><a href="#hosts">Hosts</a></li>
         </ul>
       </nav>
-      <a class="contact-us" href="#register-now-form">Register Now</a>
+      <a class="contact-us" href="#register-now-section">Register Now</a>
     </section>
   </header>
 
@@ -67,7 +67,7 @@
           <p>Learn 7 life transforming habits in 21 days</p>
         </div>
         <div class="register-now-div">
-          <a class="register-now" href="#register-now-form">
+          <a class="register-now" href="#register-now-section">
             <span class="register-text">Register Now</span>
             <img width="14" height="0"
               src="https://satvic-new-website.s3.ap-south-1.amazonaws.com/icons/home/arrow.svg" />
@@ -108,9 +108,10 @@
 
       </div>
       <div class="video-section">
-        <iframe id="hero-video" src="https://www.youtube.com/embed/1zqFp1bY4p8?autoplay=1&mute=1&si=RuwYpJZGfBeBSord"
+        <iframe id="hero-video" src="https://www.youtube.com/embed/1zqFp1bY4p8?autoplay=1&mute=1&si=RuwYpJZGfBeBSord?cc_load_policy=3"
           frameborder="0" allow="autoplay; encrypted-media" allowfullscreen
-          style="position: absolute; top: 0; left: 0; width: 100%; height: 100%; object-fit: cover; border-radius: 12px;">
+          style="position: absolute; top: 0; left: 0; width: 100%; height: 100%; object-fit: cover; border-radius: 12px;"
+          >
         </iframe>
         <!-- <video id="video"
           poster="https://satvic-new-website.s3.ap-south-1.amazonaws.com/images/workshop/detail/hero-video-thumbnail.webp"
@@ -2339,6 +2340,7 @@
               </div>
             </div>
           </div>
+          <div  id="register-now-section"></div>
           <div id="register-now-form" class="register-box mt-responsive">
             <h4 class="register-now-heading">Register Now</h4>
             <p class="register-now-text-subheading text-center">
@@ -2498,7 +2500,7 @@
               <span>Contribution: <span class="inr">₹</span>990 - <span class="inr">₹</span>2990</span>
             </li>
           </ul>
-          <a class="sidebar-register-now" href="#register-now-form"><span class="sidebar-register-text">Register
+          <a class="sidebar-register-now" href="#register-now-section"><span class="sidebar-register-text">Register
               Now</span>
             <img style="width: 14px" width="14" height="0"
               src="https://satvic-new-website.s3.ap-south-1.amazonaws.com/icons/home/arrow.svg" /></a>
@@ -2545,7 +2547,7 @@
       <h5>Ultimate Health Challenge</h5>
       <p id="uhc-changing-text">Reach your peak health</p>
     </div>
-    <a href="#register-now-form" class="uhc-mobile-button">Register</a>
+    <a href="#register-now-section" class="uhc-mobile-button">Register</a>
   </section>
   <footer class="footer-bottom">
     <div class="container-class footer-data">
@@ -2628,7 +2630,7 @@
             </label>
           </div>
           <div class="scholarship-terms-parent">
-            <input style="border-color: #666" class="custom-checkbox" type="checkbox" id="scholarship-terms" required />
+            <input style="border-color: #666" class="custom-checkbox" type="checkbox" id="scholarship-terms" checked />
             <label class="scholarship-terms" for="scholarship-terms">I agree and accept the
               <a class="tandc" target="_blank" style="text-decoration: underline"
                 href="https://satvicmovement.org/terms-of-services">terms and conditions.</a></label>
@@ -2693,13 +2695,14 @@
 <script>
   window.addEventListener('scroll', function () {
     const uhcSection = document.querySelector('.uhc-mobile');  // Target the section
-    const targetSection = document.querySelector('#register-now-form');  // The section you want to detect crossing
+    const targetSection = document.querySelector('#register-now-section');  // The section you want to detect crossing
 
     // Get the position of the target section (for example, the section to trigger the hide action)
     const targetPosition = targetSection.getBoundingClientRect().top;
+    
 
     // Check if the user has scrolled past the target section
-    if (targetPosition < 900) {
+    if (targetPosition > 13200 || targetPosition < 900) {
       uhcSection.style.display = 'none';  // Hide the section
     } else {
       uhcSection.style.display = 'flex';  // Show the section again
@@ -3106,7 +3109,7 @@
 <!-- About The Hosts -->
 <script>
   document.addEventListener("DOMContentLoaded", () => {
-    const cardHeight = 125; // Collapsed height
+    const cardHeight = 123; // Collapsed height
 
     document.querySelectorAll(".card").forEach((card) => {
       const description = card.querySelector(".description");
