--- a/session/multi-session.html
+++ b/session/multi-session.html
@@ -5,13 +5,17 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Workshop Detail</title>
+  <link rel="apple-touch-icon" sizes="180x180" href="/favicon/apple-touch-icon.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="/favicon/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="/favicon/favicon-16x16.png">
+  <link rel="manifest" href="/site.webmanifest">
   <link href="https://fonts.googleapis.com/css2?family=Greycliff+CF&display=swap" rel="stylesheet" />
   <link href="./fonts/stylesheet.css" rel="stylesheet" />
-  <link rel="stylesheet" href="./styles.css" />
-  <link rel="stylesheet" href="./styles-xsm.css" />
-  <link rel="stylesheet" href="./styles-sm.css" />
-  <link rel="stylesheet" href="./styles-md.css" />
-  <link rel="stylesheet" href="./styles-lg.css" />
+  <link rel="stylesheet" href="../styles.css" />
+  <link rel="stylesheet" href="../styles-xsm.css" />
+  <link rel="stylesheet" href="../styles-sm.css" />
+  <link rel="stylesheet" href="../styles-md.css" />
+  <link rel="stylesheet" href="../styles-lg.css" />
   <link rel="stylesheet" href="../styles-xl.css" />
   <!-- Intl-Tel-Input CSS -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/intl-tel-input/25.2.1/build/css/intlTelInput.min.css" />
